authentication and authorization added

--- a/FitFlare.Api/appsettings.json
+++ b/FitFlare.Api/appsettings.json
@@ -11,5 +11,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt" : {
+    "Key" : "RandomKeyGNGImmachangeitbutfornowimmaleavetitlikets",
+    "Issuer": "localhost:7014",
+    "Audience": "localhost:7014"
+  },
   "AllowedHosts": "*"
 }
