ai analysier added, bg services added

--- a/FitFlare.Api/appsettings.Development.json
+++ b/FitFlare.Api/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "GeminiApiKey" : "AIzaSyC8GsSSDqSjCnhPzsUbu4_YVv8m75VCdfM",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
