basic chat support added via signalR, db updated, Message model added

--- a/FitFlare.Application/FitFlare.Application.csproj
+++ b/FitFlare.Application/FitFlare.Application.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.17" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.10.0" />
       <PackageReference Include="UGemini" Version="0.1.1" />
     </ItemGroup>
