--- a/FitFlare.Core/FitFlare.Core.csproj
+++ b/FitFlare.Core/FitFlare.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.17" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
     </ItemGroup>
 
