email confirmation added

--- a/FitFlare.Api/appsettings.json
+++ b/FitFlare.Api/appsettings.json
@@ -16,5 +16,13 @@
     "Issuer": "localhost:7014",
     "Audience": "localhost:7014"
   },
+
+  "EmailSettings": {
+    "From": "tnizami006@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": "465",
+    "Username": "tnizami006@gmail.com",
+    "Password": "lqdm sjel wwav ctzc"
+  },
   "AllowedHosts": "*"
 }
